prepare for new environment